bat.bool1.icyhot.IcyHot.scala.error
Compilation error:
IcyHot:2: error: not found: value temp
  if ((temp1 < 0 && temp2 > 100) ||(temp1 > 0 && temp < 100))
                                                 ^